--- a/report_latex/src/sota.tex
+++ b/report_latex/src/sota.tex
@@ -1,5 +1,5 @@
 \section{OOD detection in multi-class setting}
-In 2015, Nguyen et al.~\cite{nguyenDeepNeuralNetworks2015} exploid the vulnerability of deep networks.
+In 2015, Nguyen et al.~\cite{nguyenDeepNeuralNetworks2015} exposed the vulnerability of deep networks.
 They found that one cause of overconfidence for OOD data is due to the nature of the fast-growing exponential function used in computing softmax probabilities.
 Small changes to the logits can result in significant changes to the output distribution. The direct correlation between prediction probability and confidence in a softmax distribution is poor.
 
